--- a/style.css
+++ b/style.css
@@ -1,314 +1,498 @@
 *{
-    margin:0;
-    padding:0;
-    box-sizing: border-box;
-    font-family: Arial, Helvetica, sans-serif;
+    margin: 0;
+    padding: 0;
+    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+    box-sizing: border-box ;
 }
 body{
-    height: 90%;
-    display:flex;
-    justify-content: center;
-    align-items: center;
-    flex-direction: column;
-    background-color:#f0f2f5;;
-    font-family:Arial, Helvetica, sans-serif;
+    background-color:#f7f7f7 ;
 }
-
-.container{
-    margin:60px;
-    position: relative;
+nav{
     display: flex;
-    flex: 80%;
-    flex-direction: row;
-    align-self: center;
-    justify-content: center;
-    
+    align-items: centre;
+    justify-content: space-between;
+    background: white;
+    padding: 5px 5%;
+    position:sticky;
+    top:0;
+    z-index: 100; 
 }
-.leftpart{
-    width: 40%;
+.logo{
+    width: 50px;
+    margin-right: 45px;
 }
-.leftpart img{
-    width: 80%;
-    background: #eeeff4;
-}
-.leftpart h3{
-    margin-left: 50px;
-    color:black;
-    font-size: 25px;
-    font-weight: normal;
-    
-}
-.Rightpart{
-    width: 50%;
-    display:flex;
+.nav-left, .nav-right{
+    display: flex;
     align-items:center;
-    flex-direction: column;
-}
-.Rightpart a{
-    text-decoration: none;
-    color: royalblue;
-    
-}
-.Rightpart p{
-    color: black;
-    font-size: small;
-}
-.loginpage{
-    display: flex;
-    flex-direction: column;
-    align-items:center;
-    background-color: #fff;
-    width:450px;
-    height:370px;
-    box-shadow:-10px -10px 15px rgba(0,0,0,0.1),
-    10px 10px 15px rgba(0,0,0,0.1);
-    border-radius: 10px;
-}
-form{
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
-    padding:15px 0px;
-}
-input{
-    width: 380px;
-    height:50px;
-    margin:10px 0px;
-    padding:0px 10px ;
-    outline:none;
-    border:1px solid #ccc;
-    font-size: 18px;
-    border-radius: 10px;
-}
-input[type="submit"]{
-    background-color: royalblue;
-    color:white;
-}
-/*p{
-    color:royalblue;
-}*/
-hr{
-    border:1px solid #ccc;
-    width: 320px;
-    margin:20px 0px;
-}
-.createaccount{
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    text-align: center;
-    width:unset;
-    height:50px;
-    font-size:50px;
-    font-weight: 30px;
-    
-}
-.createaccount button{
-    width: 350px;
-    height: 40px;
-    background-color: #4CAF50;
-    border-radius: 10px;
-    font-style: normal;
-    font-weight: bold;
-    border-bottom: #4CAF50;
-    border-color: #4CAF50;
-    border-right: #4CAF50;
-
-}
-.create-apage{
-    margin-top: 50px;
-}
-.footer-wrapper {
-    margin: 0 10px;
-    padding: 25px;
-    text-align: center;
-    width: 980px;
-    background-color: red;
-}
-.footer-wrapper div {
-    float: left;
-    font-family: helvetica, arial, sans-serif;
-}
-.div1 {
-    margin-top: 30px;
-    width: 590px;
-    text-align: left;
-}
-.div1 p {
-    font-size: 20px;
-    font-family: arial;
-    font-weight: bold;
-    margin: 0px;
-    color: #0e385f;
-}
-#wrapper #div2 {
-    margin-top: 10px;
-    width: 390px;
-    text-align: left;
 }
 
-    #wrapper #div2 h1 {
-        margin: 0px;
-        font-size: 37px;
-        color: #2E2E2E;
-    }
 
-    #wrapper #div2 p {
-        font-size: 18px;
-        color: #2E2E2E;
-    }
-
-    #wrapper #div2 li {
-        list-style-type: none;
-        margin-top: 10px;
-    }
-
-        #wrapper #div2 li #firstname {
-            width: 49%;
-        }
-
-        #wrapper #div2 li #surname {
-            margin-left: 2%;
-            width: 49%;
-        }
-
-        #wrapper #div2 li input[type="text"] {
-            width: 100%;
-            height: 40px;
-            border-radius: 5px;
-            padding-left: 10px;
-            font-size: 18px;
-            border: 1px solid #BDBDBD;
-        }
-
-        #wrapper #div2 li input[type="password"] {
-            width: 100%;
-            height: 40px;
-            border-radius: 5px;
-            padding-left: 10px;
-            font-size: 18px;
-            border: 1px solid #BDBDBD;
-        }
-
-        #wrapper #div2 li select {
-            padding: 4px;
-            float: left;
-        }
-
-        #wrapper #div2 li a {
-            margin-left: 10px;
-            width: 150px;
-            color: #045FB4;
-            text-decoration: none;
-            font-size: 11px;
-            display: inline-block;
-            vertical-align: middle;
-            line-height: 15px;
-        }
-
-            #wrapper #div2 li a:hover {
-                text-decoration: underline;
-            }
-
-    #wrapper #div2 li {
-        color: #2E2E2E;
-        font-size: 18px;
-    }
-
-    #wrapper #div2 #terms {
-        color: #424242;
-        font-size: 11px;
-    }
-
-        #wrapper #div2 #terms a {
-            display: inline;
-            margin: 0px;
-        }
-
-    #wrapper #div2 li input[type="submit"] {
-        width: 205px;
-        height: 45px;
-        text-align: center;
-        font-size: 19px;
-        margin-top: 10px;
-        margin-bottom: 10px;
-        font-family: 'Freight Sans Bold', helvetica, arial, sans-serif !important;
-        font-weight: bold !important;
-        background: linear-gradient(#67ae55, #578843);
-        background-color: #69a74e;
-        box-shadow: inset 0 1px 1px #a4e388;
-        border-color: #3b6e22 #3b6e22 #2c5115;
-        border: 1px solid;
-        border-radius: 5px;
-        color: #fff;
-        cursor: pointer;
-        display: inline-block;
-        position: relative;
-        text-shadow: 0 1px 2px rgba(0,0,0,.5);
-    }
-
-    #wrapper #div2 #create_page {
-        color: #424242;
-        font-size: 13px;
-        font-weight: bold;
-    }
-
-        #wrapper #div2 #create_page a {
-            display: inline;
-            margin: 0px;
-            font-size: 13px;
-        }
-
-#footer_wrapper {
-width: 100%;
-clear: both;
-float: left;
-margin-top: 30px;
-min-width: 995px;
-background-color: white;
-text-align: left;
-}
-
-#footer1 {
-width: 980px;
-margin: 0px auto;
-padding: 0px;
-border-bottom: 1px solid #E6E6E6;
-height: 30px;
-line-height: 30px;
-font-size: 12px;
-color: #848484;
-}
-
-#footer1 a {
-    color: #365899;
-    display: inline;
-    margin-left: 10px;
-    text-decoration: none;
-}
-
-    #footer1 a:hover {
-        text-decoration: underline;
-    }
-
-#footer2 {
-width: 980px;
-margin: 0px auto;
-padding: 0px;
-font-size: 12px;
-color: #848484;
-}
-
-#footer2 a {
-    color: #365899;
+.nav-right ul li{
+    list-style:none;
     display: inline-block;
-    margin: 5px;
-    margin-left: 0px;
-    min-width: 80px;
-    text-decoration: none;
+}
+.nav-right ul li img{
+    background: linear-gradient(90deg, rgba(234,235,238,1) 0%, rgba(0,0,0,1) 47%, rgba(228,228,235,1) 100%);
+    width: 28px;
+    margin: 0 10px;
+}
+.nav-user-icon img{
+    width:40px;
+    border-radius: 99%;
+    cursor: pointer; 
+}
+.nav-user-icon{
+    margin-left: 10px;
+}
+.menu-box{
+    width: 25px;
+    margin-right: 30px;
+    
+}
+.menu-box img{
+    width: 100%;
+    text-align: center;
+    
+}
+.menu-box ul li a{
+     color: white;
+     
+}
+.menu-box:hover, .nav-right ul li :hover{
+    background-color: lightgray;
+    border-radius: 5px;
 }
 
-    #footer2 a:hover {
-        text-decoration: underline;
+
+/*.active,.menu-box ul li a:hover{
+    background-color: #1876f2;
+    border-radius: 3px;
+}
+.sub-menu{
+    display: none;
+    width: auto;
+}
+.sub-menu:hover{
+    display: block;
+    width: auto;
+*/
+.search-box{
+    background-color: white;
+    width: 100%;
+    border-radius: 20px;
+    display: flex;
+    align-items: center;
+    margin-left: 300px;
+    
+}
+.search-box img{
+    margin-left:10px;
+    width: 20px;
+}
+.search-box input{
+    width: 400px;
+    background-color:#f7f7f7 ;
+    padding: 10px;
+    border-radius: 15px;
+    
+}
+.online{
+    position: relative;
+}
+.online::after{
+    content:'';
+    width:7px;
+    height:7px;
+    border: 2px solid #fff;
+    border-radius: 50%;
+    background:rgb(103, 235, 103);
+    position:absolute;
+    top:0;
+    right:0;
+}
+.container{
+    display: flex;
+    justify-content: space-between;
+    padding: 13px 3%;
+    display: flex;
+    position: sticky;
+    
+}
+
+.left-sidebar{
+    border-radius: 4px;
+    color: #626262;
+    flex-basis: 25%;
+    height: fit-content;
+    /*top: 0px;*/
+    box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+    
+}
+
+.user-profile-left{
+    margin-left:0px;
+    margin-top: 15px;
+}
+.user-profile-left img{
+    border-radius:100%;
+    margin-left: 0px;
+}
+.user-profile-left p{
+    font-size:20px;
+    text-align: center;   
+}
+.user-profile-left i{
+    color: #1876f2;
+}
+.imp-links{
+    height: fit-content;
+    
+
+}
+.imp-links a{
+    padding: 5px 5px;
+    text-decoration:none;
+    display: flex;
+    align-items: center;
+    margin-bottom: 10px;
+    font-weight: 550; 
+    color:#050505;
+    font-family: Arial, Helvetica, sans-serif;
+    width: fit-content;
+} 
+.imp-links p{
+    margin-left: 15px;
+}
+.shortcut-links{
+    width: 40px;
+    border-radius: 4px;
+    height: auto;
+    margin-right: 15px;
+   
+}
+.shortcut-links p{
+   /* margin: 25px 0;*/
+    color: #626262;
+    font-weight: 400;
+    vertical-align: auto;
+}
+.shortcut-links a{
+    padding:10px;
+    text-decoration: none;
+    color:black;
+    font-weight: 400;
+    /*align-items: center;*/
+    display: flex;
+    margin-bottom: 25px;
+  
+}
+.shortcut-links img{
+    margin-right:15px ;
+    margin-left: 15px;
+    border-radius: 5px;
+}
+
+.right-sidebar{
+    flex-basis: 25%;
+    position: relative;
+    top: 70px;
+    align-self:flex-start;
+    padding: 20px;
+    border-radius: 4px;
+    color: #626262;
+    box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
     }
+
+
+.main-content{
+    flex-basis: 47%;
+}
+.imp-links a img{
+    width:45px;
+    margin-right:15px;
+    margin-left: 20px;
+}
+/*.imp-links a :last-child{
+    color: red;
+}*/
+.imp-links {
+    border-bottom: 1px solid #ccc  ;
+}
+.shortcut-links a img{
+    width : 40px;
+    border-radius: 4px;
+    margin: right 15px;
+}
+.shortcut-links p{
+    margin:25px 0;
+    margin-left: 15px;
+    color: black;
+    font: weight 500px;
+}
+.sidebar-title{
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    margin: bottom 18px;
+
+}
+.sidebar-title h4{
+   font-weight: bold;
+   font-size: 16px; 
+
+}
+.sidebar-title a{
+    text-decoration: none;
+    color: black;
+    font-size:14px;
+}
+.event{
+    display: flex;
+    font-size: 14px;
+    margin-bottom: 20px;
+    padding-bottom: 4px;
+    
+
+}
+.left-event{
+    border-radius: 10px;
+    height:65px;
+    width:65px;
+    margin-right:15px;
+    padding: top 10px;
+    text-align: center;
+    position: relative;
+    overflow: hidden;
+    box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+    background-color: antiquewhite;
+
+}
+.event p{
+    font-size: 12px;
+}
+
+.event a{
+    font-size: 12px;
+    text-decoration: none;
+    color: #1876f2;
+}
+
+.left-event span{
+    position: static;
+    bottom: 0;
+    left: 0;
+    font-weight:bolder;
+    padding:4px 0;
+   
+}
+.sidebar-ads{
+    width: 100%;
+    border: radius 4px;
+}
+.Online-list{
+    display: flex;
+    align-items: center;
+    margin: bottom 20px;
+
+}
+.Online-list .online img{
+    width:40px;
+    border-radius: 50%;
+
+}
+.Online-list .online{
+    width: 40px;
+    border: radius 50%;
+    margin-right: 15px;
+
+}
+.Online-list .online::after{
+    top:unset;
+    bottom: 5px;
+}
+.story-gallery{ 
+    display:flex;
+    justify-content: space-between; 
+    margin-bottom: 20px;
+    flex-basis:18%;
+    padding:10px;;
+    background-position: center;
+    background-size: cover;
+   /* border-radius: 10px;*/
+    height: unset;
+    width: unset;
+    }
+
+.story{
+    flex-basis: 18%;
+    padding-top: 32%; 
+    position: relative;
+    background-position: center;
+    background-size: cover;
+    border-radius: 10px;
+    
+}
+.story img{
+    position: absolute;
+    width: 45px;
+    border-radius: 50%;
+    top: 10px;
+    left: 10px;
+    border: 5px solid #1876f2;
+}
+.story p{
+position:absolute;
+bottom: 10px;
+width: 100%;
+text-align: center;
+color: black;
+font-size: 14px;
+}
+.story1{
+    background-image: linear-gradient(transparent,rgba(0,0,0,0.5)), url(images/status-1.png);
+
+}*/
+
+.story2{
+    background-image:linear-gradient(transparent,rgba(0,0,0,0.5)), url(images/status-2.png);
+
+}
+
+.story3{
+    background-image:linear-gradient(transparent,rgba(0,0,0,0.5)), url(images/status-3.png);
+
+}
+.story4{
+    background-image:linear-gradient(transparent,rgba(0,0,0,0.5)), url(images/status-4.png);
+
+}
+.story5{
+    background-image:linear-gradient(transparent,rgba(0,0,0,0.5)), url(images/status-5.png);
+
+}
+.story.story1 img{
+    top:unset; 
+    left:50%;
+    bottom: 40px;
+    transform: translateX(-50%);
+    border:0;
+    width: 35px;
+}
+.write-post-container{
+    width:100%;
+    background-color: #fff;
+    border-radius:6px ;
+    padding:20px;
+    color: #626262;
+}
+.user-profile{
+    display:flex;
+    align-items: center;
+} 
+.user-profile img{
+    width: 45px;
+    border-radius: 50%;
+    margin-right: 10px;
+}
+.user-profile p{
+    margin-bottom: -5px;
+    font-weight: 500;
+    color: #626262;
+
+}
+.user-profile small{
+    font-size: 12px;
+
+}
+.post-input-container{
+    padding-left: 55px;
+    padding-top: 20px;
+
+}
+.post-input-container textarea{
+    width:100%;
+    border:0;
+    outline:0;
+    border-bottom:1px solid #ccc; 
+    background:transparent;
+    resize: none;
+
+}
+.add-post-links{
+    display: flex;
+    margin-top:10px;
+
+
+}
+.add-post-links a{
+    text-decoration:none;
+    display:flex;
+    align-items:center;
+    color:#626262;
+    margin-right:30px;
+    font-size:13px;
+}
+.add-post-links img{
+    width:20px;
+    margin-right: 10px;
+
+}
+.post-container{
+    width:100%;
+    background-color: #fff;
+    border-radius:6px;
+    padding:20px;
+    color:#626262;
+    margin:20px 0;
+
+}
+.user-profile span{
+    font-size: 13px;
+    color: black; 
+}
+.post-img{
+    width:100%;
+    border-radius: 4px;
+    margin-bottom: 5px;
+
+}
+.post-row{
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+}
+.activity-icons div img{
+    width: 18px;
+    margin-right: 10px;
+}
+.activity-icons div{
+    display: inline-flex;
+    align-items:center;
+    margin-right: 30px;
+}
+ .post-profile-icon{
+    
+    float:right;
+}
+ .post-profile-icon img{
+    
+    width:20px;
+   
+    border-radius: 50%;
+    margin-right: 5px;
+}
+.load-more-btn{
+    display: block;
+    margin:auto;
+    cursor:pointer;
+    padding:5px 10px;
+    border: 1px solid #9a9a9a;
+    color: #626262;
+    background-color: transparent;
+    border-radius: 4px;
+}
+.footer{
+    text-align: center;
+    color: #9a9a9a;
+    padding:10px 0 20px; 
+}
